--- a/static/css/operat.css
+++ b/static/css/operat.css
@@ -30,18 +30,11 @@
     margin-bottom: 5px;
 }
 
-.space{
-    width: 80%;
+.cart-container{
+    width: 90%;
     margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
-}
-  
-.container{
-    display: grid;
-    width: 100%;
-    grid-template-rows: repeat(3,1fr);
-    margin: 5%;
     justify-items: space-between;
     justify-content: center;
     align-items: center;
