--- a/templates/bill.html
+++ b/templates/bill.html
@@ -9,8 +9,8 @@
     <p class="tit">Информация о купюре</p>
     <div class="bill">
         <div class="image-bill">
-            <img src="{{ bill.imagen }}" class="face" alt="{{ bill.name }} - лицевая сторона">
-            <img src="{{ bill.imagen_back }}" class="back" alt="{{ bill.name }} - обратная сторона">
+            <img src="{{ bill.image }}" class="face" alt="{{ bill.name }} - лицевая сторона">
+            <img src="{{ bill.image_back }}" class="back" alt="{{ bill.name }} - обратная сторона">
         </div>
         <div class="info">
             <p style="color: #8F96A3; font: 18px PT_Russia-Text, sans-serif; margin-bottom: 0%;">Дата ввода в обращение</p>
