--- a/templates/bill_element.html
+++ b/templates/bill_element.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/bill_element.css' %}">
 <div class="bills">
-    <a href="{% url 'bill' bill.id %}"><img src="{{bill.imagen}}" class="image-bills"></a>
+    <a href="{% url 'bill' bill.id %}"><img src="{{bill.image}}" class="image-bills"></a>
     <div class="lin">
         <p class="bill-name">{{bill.name}}</p>
         <form action="{% url 'add_to_cart' bill.id %}" method="post">
