--- a/templates/operat_el.html
+++ b/templates/operat_el.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/operat_el.css' %}">
 <div class="operat-card">
-    <img src="{{ bill.imagen }}" class="imagen">
+    <img src="{{bill.image}}" class="imagen">
     <div class="lin"></div>
     <p class="name-bill">{{ bill.name }}</p>
     <div class="lin"></div>
